Fri Nov 30 16:12:21 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.c: Patch from Hidetoshi Tajima to fix 
	bad match error when target drawable is not the 
	same depth as the root window. (#65841)

	* HACKING: Update.

2001-11-29  Matthias Clasen  <matthiasc@poet.de>

	* gdk/gdkwindow.c: Typo fix.

Thu Nov 29 21:35:56 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtkmenu.c (gtk_menu_motion_notify): add checks for
	empty menu items to behave like insensitive items (#59456)

	* gtk/gtkmenuitem.c (gtk_real_menu_item_activate_item): select
	next item if the first item in the menu is a tear off item
	(#59456-2, suggestion by Matthias Clasen)

	* gtk/gtkmenushell.c (gtk_menu_shell_button_press),
	(gtk_menu_shell_button_release), (gtk_menu_shell_entry_notify),
	(gtk_menu_shell_leave_notify), (gtk_real_menu_shell_move_current),
	(gtk_real_menu_shell_activate_current): add check, so empty
	menu items behave like insensitive items (#59456)
        
	* gtk/gtkmenuitem.[ch]: add _gtk_menu_item_is_selectable to make
	the checks more readable ...
	
	* gtk/gtkmenushell.c (gtk_menu_shell_button_press),
	(gtk_menu_shell_button_release): causes the menu to dropdown if the
	caption is clicked again (#64977)

2001-11-29  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextiter.c (_gtk_text_iter_forward_indexable_segment):
	assertion here that we were at the end iterator was not correct;
	change code to move us to the end iterator. bug #65731

>>>>>>> 1.2646
Wed Nov 28 20:05:44 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): Remove 
	improper use of g_locale_to_utf8() to convert from
	latin-1, and do it the easy way by building the string
	correctly in the first place.

Wed Nov 28 19:34:15 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkproperty-x11.c (gdk_property_change, gdk_property_get): 
	Convert atoms to and from atoms for properties of type XA_ATOM.
	(#65555, patch from Hidetoshi Tajima)
